overlays/dev/deployment-patch.yaml
apiVersion: argoproj.io/v1alpha1     
kind: Rollout  
metadata:
  name: rollout-bluegreen
spec:
  replicas: 4
  template:
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:slow-orange
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
